--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -80,7 +80,7 @@
   "menuSetGeneral": "Allgemein",
   "menuSetAbout": "Info",
   "menuAlertNoTags": "Keine Tags",
-  "menuAlertNoTagsBody": "Neue Tags können durch das Bearbeiten von Einträgen (Abschnitt \"Tags\") hinzugefügt werden.",
+  "menuAlertNoTagsBody": "Neue Tags können durch das Bearbeiten von Einträgen (Abschnitt “Tags”) hinzugefügt werden.",
   "menuEmptyTrash": "Leere Papierkorb",
   "menuEmptyTrashAlert": "Papierkorb leeren?",
   "menuEmptyTrashAlertBody": "Die Einträge können nicht wiederhergestellt werden",
@@ -92,6 +92,7 @@
   "alertSignIn": "Anmelden",
   "alertCopy": "Kopieren",
   "alertClose": "Schließen",
+  "alertDoNotAsk": "Nicht mehr nachfragen",
   "appBeta": "ACHTUNG: Beta-Version, nur für Vorschau-Zwecke",
   "footerOpen": "Öffnen / Neu",
   "footerSyncError": "Synchronisierungsfehler",
@@ -154,7 +155,7 @@
   "listNoAttachments": "keine Anhänge",
   "listAddTemplateHeader": "Templates",
   "listAddTemplateBody1": "Templates ermöglichen es, Einträge mit nur einem Klick zu erstellen. Fügen Sie etwas zum Template-Eintrag hinzu und klicken Sie auf {}, um dieses Template zu benutzen.",
-  "listAddTemplateBody2": "Sie können Ihre Templates in der Gruppe \"{}\" finden.",
+  "listAddTemplateBody2": "Sie können Ihre Templates in der Gruppe “{}” finden.",
   "searchAddNew": "Hinzufügen",
   "searchSort": "Sortierung",
   "searchCreated": "Erstelldatum",
@@ -211,6 +212,8 @@
   "openError": "Fehler",
   "openErrorDescription": "Beim Öffnen der Datei ist ein Fehler aufgetreten",
   "openErrorFileNotFound": "Datei nicht gefunden",
+  "openListErrorBody": "Dateien konnten nicht geladen werden",
+  "openShowAllFiles": "Alle Dateien anzeigen",
   "detAttDownload": "Umschalttaste + Klick auf den Anhang-Button zum Herunterladen oder",
   "detAttDelToRemove": "Backspace zum entfernen",
   "detEmpty": "Ihre Passwörter werden hier angezeigt",
@@ -243,7 +246,7 @@
   "detAttachments": "Anhänge",
   "detDelFromTrash": "Aus dem Papierkorb löschen?",
   "detDelFromTrashBody": "Es wird keine Möglichkeit zur Wiederherstellung geben.",
-  "detDelFromTrashBodyHint": "Um alle Dateien aus dem Papierkorb zu entfernen, klicken Sie auf das \"Papierkorb leeren\"-Icon im Papierkorb-Menüpunkt.",
+  "detDelFromTrashBodyHint": "Um alle Dateien aus dem Papierkorb zu entfernen, klicken Sie auf das “Papierkorb” leeren-Icon im Papierkorb-Menüpunkt.",
   "detFieldCopied": "Kopiert",
   "detFieldCopiedTime": "Kopiert für {} Sekunden",
   "detCopyHint": "Sie können den Inhalt eines Feldes kopieren, indem Sie auf seine Beschriftung klicken",
@@ -273,7 +276,7 @@
   "detSetupOtpAlertBody2": "2. Erstellen Sie einen Screenshot des QR-Codes {}",
   "detSetupOtpAlertBody3": "3. Fügen Sie ihn hier ein {}",
   "detSetupOtpAlertBody3Mobile": "3. Markieren Sie ihn oder scannen Sie ihn mit Ihrer Kamera mit dem untenstehenden Markieren/Scannen-Button",
-  "detSetupOtpAlertBody4": "Wenn Sie den Code nicht einscannen können, klicken Sie bitte auf \"Code manuell eingeben\"",
+  "detSetupOtpAlertBody4": "Wenn Sie den Code nicht einscannen können, klicken Sie bitte auf “Code manuell eingeben”",
   "detSetupOtpManualButton": "Code manuell eingeben",
   "detSetupOtpScanButton": "Markieren/Scannen",
   "detSetupOtpAlertBodyWith": "mit {}",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Ihr Browser wird nicht unterstützt.",
   "appTabWarn": "Zu viele Tabs",
   "appTabWarnBody": "KeeWeb kann nicht in mehreren Browser-Tabs gleichzeitig genutzt werden, bitte schließen Sie diesen Tab.",
+  "appRightsAlert": "Schreibschutz für KeeWeb wird eingerichtet",
+  "appRightsAlertBody1": "Ihre KeeWeb-Anwendung ist nicht gegen Änderungen von außen gesichert. Um diesen Schreibschutz einzurichten, benötigt die App Administratorrechte.",
+  "appRightsAlertBody2": "Sie möchten der App keine Administratorrechte erteilen? Mit folgendem Befehl können Sie den Schreibschutz auch von Hand im Terminal aktivieren",
   "setGenTitle": "Allgemeine Einstellungen",
   "setGenUpdate": "Update",
   "setGenNewVersion": "Eine neue Version der App ist verfügbar und wurde heruntergeladen",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "In {} Sekunden",
   "setGenClearMinute": "Nach einer Minute",
   "setGenMinInstead": "App beim Schließen stattdessen minimieren",
+  "setGenLock": "Automatisch sperren",
   "setGenLockMinimize": "Beim Minimieren automatisch sperren",
   "setGenLockCopy": "Nach dem Kopieren eines Passworts automatisch sperren",
   "setGenLockAutoType": "Automatisches Sperren bei Auto-Type",
+  "setGenLockOrSleep": "Bei Aktivierung von Bildschirmsperre oder Ruhezustand",
   "setGenStorage": "Synchronisierung",
   "setGenShowAdvanced": "Erweiterte Einstellungen anzeigen",
   "setGenDevTools": "Entwicklerwerkzeuge anzeigen",
@@ -444,8 +452,6 @@
   "setFileUnsavedBody": "Es gibt ungespeicherte Änderungen in dieser Datei",
   "setFileCloseNoSave": "Sperren und Änderungen verwerfen",
   "setFileDontClose": "Nicht sperren",
-  "setFileNoWebDavUpload": "Speichern über WebDAV nicht möglich",
-  "setFileNoWebDavUploadBody": "Neue Dateien zu WebDAV hinzuzufügen wird aktuell nicht unterstützt. Bitte laden Sie Ihre Datei manuell hoch und öffnen Sie sie anschließend mit der App.",
   "setShTitle": "Tastenkürzel",
   "setShShowAll": "alle Einträge anzeigen",
   "setShColors": "mit Farben markierte Einträge anzeigen",
@@ -518,17 +524,6 @@
   "setHelpWebApp": "Web-App",
   "setHelpUpdates": "Neuigkeiten",
   "setHelpTwitter": "Twitter",
-  "dropboxLogin": "In Dropbox anmelden",
-  "dropboxLoginBody": "Um fortzufahren müssen Sie sich bei Dropbox einloggen.",
-  "dropboxSyncError": "Dropbox Synchronisierungsfehler",
-  "dropboxNotFoundBody": "Die Datei wurde nicht gefunden. Wurde Sie vom anderen Computer entfernt?",
-  "dropboxFull": "Dropbox voll",
-  "dropboxFullBody": "Ihre Dropbox ist voll, es ist kein Speicherplatz mehr verfügbar.",
-  "dropboxRateLimitedBody": "Von dieser App wurden zu viele Anfragen an Dropbox geschickt. Bitte veruschen Sie es später noch einmal.",
-  "dropboxNetError": "Verbindungsfehler während der Dropbox-Synchronisierung",
-  "dropboxNetErrorBody": "Ein Verbindungsfehler ist während der Dropbox-Synchronisierung aufgetreten. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
-  "dropboxErrorBody": "Bei der Dropbox-Synchronisierung ist etwas schief gegangen. Bitte versuchen Sie es später noch einmal. Fehlercode:",
-  "dropboxErrorRepeatBody": "Bei der Dropbox-Synchronisierung ist etwas schief gegangen. Bitte versuchen Sie es später noch einmal. Fehler:",
   "dropboxSetupDesc": "Etwas Konfiguration ist notwendig, um Dropbox in einer selbst gehosteten Web-App zu verwenden. Bitte erstellen Sie eine eigene Dropbox-App und tragen Sie ihren App-Schlüssel unten ein.",
   "dropboxAppKey": "Dropbox App-Schlüssel",
   "dropboxAppKeyDesc": "Kopieren Sie den Schlüssel aus Ihrer Dropbox-App (Entwicklereinstellungen)",
