--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Iniciar sesión",
   "alertCopy": "Copiar",
   "alertClose": "Cerrar",
+  "alertDoNotAsk": "No volver a preguntar",
   "appBeta": "ADVERTENCIA: versión beta, solo para vista anticipada",
   "footerOpen": "Abrir / Nueva",
   "footerSyncError": "Error al sincronizar",
@@ -211,6 +212,8 @@
   "openError": "Error",
   "openErrorDescription": "Ha ocurrido un error al abrir el archivo",
   "openErrorFileNotFound": "Archivo no encontrado",
+  "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
+  "openShowAllFiles": "Mostrar todos los archivos",
   "detAttDownload": "Haz Mayús-clic sobre el botón para descargar o",
   "detAttDelToRemove": "Delete para eliminar",
   "detEmpty": "Tus contraseñas se mostarán aquí",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Tu navegador no está soportado.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
+  "appRightsAlert": "Bloqueando la app KeeWeb",
+  "appRightsAlertBody1": "Tu aplicación de KeeWeb no está protegida todavía contra cambios no autorizados. Te estamos pidiendo permiso para hacer que la aplicación sea escribible solo para administradores.",
+  "appRightsAlertBody2": "¿No quieres dar permisos? Puedes hacerlo tú mismo en Terminal",
   "setGenTitle": "Opciones generales",
   "setGenUpdate": "Actualizar",
   "setGenNewVersion": "Nueva versión de aplicación liberada y descargada",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "En {} segundos",
   "setGenClearMinute": "En un minuto",
   "setGenMinInstead": "Minimizar aplicación en vez de cerrar",
+  "setGenLock": "Auto bloqueo",
   "setGenLockMinimize": "Auto-bloquear al minimizar",
   "setGenLockCopy": "Auto-bloquear al copiar contraseña",
   "setGenLockAutoType": "Auto-bloquear en auto-tecleo",
+  "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o en suspensión",
   "setGenStorage": "Almacenamiento",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
@@ -444,8 +452,6 @@
   "setFileUnsavedBody": "Hay cambios sin guardar en este archivo",
   "setFileCloseNoSave": "Cerrar y perder cambios",
   "setFileDontClose": "No cerrar",
-  "setFileNoWebDavUpload": "No se puede guardar a WebDAV",
-  "setFileNoWebDavUploadBody": "Todavía no está soportado añadir nuevos archivos a WebDAV. Por favor, sube tu archivo manualmente y después abre la aplicación.",
   "setShTitle": "Atajos",
   "setShShowAll": "ver todos los elem.",
   "setShColors": "ver elem. con colores",
@@ -518,17 +524,6 @@
   "setHelpWebApp": "Aplicación web",
   "setHelpUpdates": "Actualizaciones",
   "setHelpTwitter": "Twitter",
-  "dropboxLogin": "Acceso Dropbox",
-  "dropboxLoginBody": "Para continuar, identíficate en Dropbox",
-  "dropboxSyncError": "Error Sinc. Dropbox",
-  "dropboxNotFoundBody": "El archivo no se ha encontrado. ¿Puede haber sido eliminado de otro ordenador?",
-  "dropboxFull": "Dropbox Lleno",
-  "dropboxFullBody": "Tu Dropbox está lleno, no hay más espacio libre.",
-  "dropboxRateLimitedBody": "Se han realizado demasiadas peticiones desde esta aplicación a Dropbox. Vuelve a intentarlo más tarde.",
-  "dropboxNetError": "Error Sincronización Red Dropbox",
-  "dropboxNetErrorBody": "Ha sucedido un error de red en la sincronización con Dropbox. Comprueba tu conexión y vuelve a intentarlo más tarde.",
-  "dropboxErrorBody": "Algo fue mal en la sincronización con Dropbox. Por favor, vuelve a intentarlo más tarde. Código de error:",
-  "dropboxErrorRepeatBody": "Algo fue mal en la sincronización con Dropbox. Por favor, vuelve a intentarlo más tarde. Error:",
   "dropboxSetupDesc": "Son necesarios ciertos parámetros de configuración para usar Dropbox en una aplicación auto-alojada. Por favor, crea tu aplicación de Dropbox y pega su clave aquí debajo.",
   "dropboxAppKey": "Clave de aplicación de Dropbox",
   "dropboxAppKeyDesc": "Copia la clave de tu aplicación de Dropbox (modo desarrollador)",
