--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Connexion",
   "alertCopy": "Copier",
   "alertClose": "Fermer",
+  "alertDoNotAsk": "Ne plus me le redemander",
   "appBeta": "ATTENTION: version beta, aperçu seulement",
   "footerOpen": "Ouvrir/Nouveau",
   "footerSyncError": "Sync erreur",
@@ -211,6 +212,8 @@
   "openError": "Erreur",
   "openErrorDescription": "Une erreur est survenue à l'ouverture du fichier",
   "openErrorFileNotFound": "Fichier non trouvé",
+  "openListErrorBody": "Erreur au chargement de la liste des fichiers",
+  "openShowAllFiles": "Tous les fichiers",
   "detAttDownload": "Cliquer sur le bouton de pièce-jointe en pressant la touche Maj ou",
   "detAttDelToRemove": "Supprimer pour enlever",
   "detEmpty": "Vos mot de passe seront affichés ici",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Votre navigateur n'est pas supporté.",
   "appTabWarn": "Trop d'onglets",
   "appTabWarnBody": "KeeWeb ne peut être utilisé dans 2 onglets de navigateurs simultanément. Fermer cet onglet, s'il vous plait.",
+  "appRightsAlert": "Verrouiller dossier de l'appli",
+  "appRightsAlertBody1": "Votre application KeeWeb est accessible en écriture. Nous demandons les droits administrateurs pour le mettre en écriture uniquement pour les administrateurs.",
+  "appRightsAlertBody2": "Vous ne voulez pas donner les droits administrateurs ? Vous pouvez le faire vous-même à partir d'un terminal",
   "setGenTitle": "Paramètres",
   "setGenUpdate": "Mettre à jour",
   "setGenNewVersion": "Une nouvelle version a été téléchargée",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "Dans {} secondes",
   "setGenClearMinute": "Dans une minute",
   "setGenMinInstead": "Réduire l'application au lieu de fermer",
+  "setGenLock": "Verrou Auto",
   "setGenLockMinimize": "Verrouiller après réduction",
   "setGenLockCopy": "Verrouiller après copie de mot de passe",
   "setGenLockAutoType": "Verrouillage auto sur saisie auto",
+  "setGenLockOrSleep": "Quand l'ordinateur est verrouillé ou mis en sommeil",
   "setGenStorage": "Stockage",
   "setGenShowAdvanced": "Afficher les paramètres avancés",
   "setGenDevTools": "Afficher les outils de développement",
@@ -444,8 +452,6 @@
   "setFileUnsavedBody": "Il y a des modifications non sauvegardées dans ce fichier",
   "setFileCloseNoSave": "Fermer et perdre les modifs",
   "setFileDontClose": "Ne pas fermer",
-  "setFileNoWebDavUpload": "Impossible de sauver sur WebDAV",
-  "setFileNoWebDavUploadBody": "Ajouter de nouveau fichiers à WebDAV n'est pas supporté actuellement. Transférer votre fichier manuellement et ouvrez-le dans l'application.",
   "setShTitle": "Raccourcis",
   "setShShowAll": "montrer tout",
   "setShColors": "montrer les champs en couleur",
@@ -518,17 +524,6 @@
   "setHelpWebApp": "Appli web",
   "setHelpUpdates": "Mises à jour",
   "setHelpTwitter": "Appli twitter",
-  "dropboxLogin": "Connexion Dropbox",
-  "dropboxLoginBody": "Pour continuer, vous devez vous connecter à Dropbox",
-  "dropboxSyncError": "Erreur synchro Dropbox",
-  "dropboxNotFoundBody": "Le fichier est introuvable. A-t-il été supprimé d'un autre ordinateur ?",
-  "dropboxFull": "Dropbox plein",
-  "dropboxFullBody": "Votre Dropbox est plein, il ne reste plus d'espace.",
-  "dropboxRateLimitedBody": "Trop de requètes à Dropbox ont été faites par cette appli. Veuillez recommencer plus tard.",
-  "dropboxNetError": "Erreur de synchro réseau avec Dropbox",
-  "dropboxNetErrorBody": "Une erreur réseau s'est produite pendant la synchronisation Dropbox. Vérifier votre connexion et réessayer.",
-  "dropboxErrorBody": "Quelque chose s'est mal passé pendant la synchronisation Dropbox. Merci de réessayer plus tard. Code d'erreur :",
-  "dropboxErrorRepeatBody": "Quelque chose s'est mal passé pendant la synchronisation Dropbox. Merci de réessayer plus tard. Erreur :",
   "dropboxSetupDesc": "Une configuration particulière est nécessaire pour utiliser Dropbox dans cette application. Merci de créer votre propre Dropbox application et de remplir ci-dessous avec sa clé .",
   "dropboxAppKey": "Clé Dropbox",
   "dropboxAppKeyDesc": "Copier la clé de votre appli Dropbox (Réglages développeur)",
