--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -273,7 +273,7 @@
   "detSetupOtpAlertBody2": "fai uno screenshot del codice QR \u0010{}",
   "detSetupOtpAlertBody3": "incollalo qui {}",
   "detSetupOtpAlertBody3Mobile": "3. selezionalo o esegui una scansione con la tua camera usando il pulsante Seleziona/Scansiona sotto",
-  "detSetupOtpAlertBody4": "Se non riesci a scansionare il codice premi \"Inserisci il codice manualmente\"",
+  "detSetupOtpAlertBody4": "Se non riesci a scansionare il codice premi “Inserisci il codice manualmente”",
   "detSetupOtpManualButton": "Inserisci manualmente",
   "detSetupOtpScanButton": "Seleziona/Scansiona",
   "detSetupOtpAlertBodyWith": "con \u0010{}",
@@ -444,8 +444,6 @@
   "setFileUnsavedBody": "Ci sono modifiche non salvate in questo file",
   "setFileCloseNoSave": "Chiudi e perdi modifiche",
   "setFileDontClose": "Non chiudere",
-  "setFileNoWebDavUpload": "Impossibile salvare su WebDAV",
-  "setFileNoWebDavUploadBody": "L'aggiunta di nuovi file con WebDAV non è supportata al momento. Per favore, carica manualmente il tuo file e poi aprilo da KeeWeb.",
   "setShTitle": "Scorciatoie",
   "setShShowAll": "Visualizza tutti",
   "setShColors": "Visualizza tutti con colori",
@@ -518,17 +516,6 @@
   "setHelpWebApp": "Applicazione web",
   "setHelpUpdates": "Aggiornamenti",
   "setHelpTwitter": "Twitter dell'applicazione",
-  "dropboxLogin": "Login di Dropbox",
-  "dropboxLoginBody": "Per continuare, devi fare login con Dropbox.",
-  "dropboxSyncError": "Errore di sincronizzazione con Dropbox",
-  "dropboxNotFoundBody": "File non trovato. È stato rimosso da un altro computer?",
-  "dropboxFull": "Dropbox pieno",
-  "dropboxFullBody": "Il tuo Dropbox è pieno, non c'è più spazio libero.",
-  "dropboxRateLimitedBody": "Sono state effettuate troppe richieste a Dropbox da questa applicazione. Per favore, riprova più tardi.",
-  "dropboxNetError": "Errore di rete nella sincronizzazione con Dropbox",
-  "dropboxNetErrorBody": "Si è verificato un errore di rete durante la sincronizzazione con Dropbox. Per favore, controlla la tua connessione e riprova.",
-  "dropboxErrorBody": "Qualcosa è andato storto durante la sincronizzazione con Dropbox. Per favore, riprova più tardi. Codice errore:",
-  "dropboxErrorRepeatBody": "Qualcosa è andato storto durante la sincronizzazione con Dropbox. Per favore, riprova più tardi. Errore:",
   "dropboxSetupDesc": "Sono richieste alcune configurazioni per usare Dropbox se l'applicazione è self-hosted. Per favore, crea la tua app Dropbox e riempi i campi qui sotto.",
   "dropboxAppKey": "Chiave della app Dropbox",
   "dropboxAppKeyDesc": "Copia la chiave dalla tua app Dropbox (Impostazioni per sviluppatori)",
