--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Zaloguj",
   "alertCopy": "Skopiuj",
   "alertClose": "Zamknij",
+  "alertDoNotAsk": "Nie pytaj mnie więcej",
   "appBeta": "UWAGA: wersja beta tylko do wstępnego podglądu",
   "footerOpen": "Otwórz / Nowy",
   "footerSyncError": "Błąd synchronizacji",
@@ -122,7 +123,7 @@
   "tagExists": "Znacznik już istnieje",
   "tagExistsBody": "Znacznik o tej samej nazwie już istnieje. Proszę wybrać inną nazwę.",
   "tagBadName": "Zła nazwa",
-  "tagBadNameBody": "Nazwa znacznika nie może zawierać znaków {}. Prowszę je usunąć.",
+  "tagBadNameBody": "Nazwa znacznika nie może zawierać znaków {}. Proszę je usunąć.",
   "genPsTitle": "Ustawienia generatora",
   "genPsCreate": "Nowe ustawienie",
   "genPsDelete": "Usuń ustawienie",
@@ -195,8 +196,8 @@
   "openLocalFileBody": "Zamierzasz otworzyć plik, który będzie przechowywany wewnątrz aplikacji. Zmiany, które dokonasz, nie zostaną zapisane z powrotem do systemu plików. Aby pobrać plik z twoimi danymi, wyeksportuj go ze strony ustawień.",
   "openLocalFileDontShow": "Nie pokazuj tego ponownie",
   "openWrongFile": "Zły plik",
-  "openWrongFileBody": "Ten format pliku jest nieobsługiwany. Ta aplikacja pracuje z plikami w formacie bazy danych KeePass (kdbx).",
-  "openKdbFileBody": "Próbujesz otworzyć starą bazę danych KeePass w formacie kdb. Ta aplikacja obsługuje tylko nowszy format kdbx. Proszę użyć KeePass v2, aby przekonwertować ten plik.",
+  "openWrongFileBody": "Ten format pliku jest nieobsługiwany. Ta aplikacja pracuje z plikami w formacie bazy danych KeePass (KDBX).",
+  "openKdbFileBody": "Próbujesz otworzyć starą bazę danych KeePass w formacie KDB. Ta aplikacja obsługuje tylko nowszy format KDBX. Proszę użyć KeePass v2, aby przekonwertować ten plik.",
   "openConfigHeader": "Ustawienia {}",
   "openUrl": "URL",
   "openUrlDesc": "https://serwer/ścieżka/plik.kdbx lub tylko plik.kdbx",
@@ -211,6 +212,8 @@
   "openError": "Błąd",
   "openErrorDescription": "Wystąpił błąd podczas otwierania pliku",
   "openErrorFileNotFound": "Nie znaleziono pliku",
+  "openListErrorBody": "Wystąpił błąd podczas ładowania listy plików",
+  "openShowAllFiles": "Pokaż wszystkie pliki",
   "detAttDownload": "Shift+kliknięcie przycisku załącznika, aby pobrać, albo",
   "detAttDelToRemove": "Delete, aby usunąć",
   "detEmpty": "Twoje hasła zostaną tutaj wyświetlone",
@@ -243,7 +246,7 @@
   "detAttachments": "Załączniki",
   "detDelFromTrash": "Usunąć z kosza?",
   "detDelFromTrashBody": "Nie będziesz mógł tego przywrócić.",
-  "detDelFromTrashBodyHint": "Aby szybko usunąć wszystkie elementy z kosza, kliknij ikonę opróżniania w menu kosza.",
+  "detDelFromTrashBodyHint": "Aby szybko usunąć wszystkie elementy z kosza, kliknij ikonę usuwania z menu kosza.",
   "detFieldCopied": "Skopiowano",
   "detFieldCopiedTime": "Skopiowano w {} sekund",
   "detCopyHint": "Możesz skopiować wartość pola poprzez kliknięcie jego tytułu",
@@ -251,7 +254,7 @@
   "detClickToAddField": "Kliknij, aby dodać nowe pole",
   "detMenuAddNewField": "Dodaj nowe pole",
   "detMenuShowEmpty": "Pokaż puste pola",
-  "detMenuHideEmpty": "Ukryj puste pole",
+  "detMenuHideEmpty": "Ukryj puste pola",
   "detMenuAddField": "Dodaj {}",
   "detMenuCopyPassword": "Skopiuj hasło",
   "detMenuCopyUser": "Skopiuj użytkownika",
@@ -273,7 +276,7 @@
   "detSetupOtpAlertBody2": "2. Zrób zrzut ekranu kodu QR {}",
   "detSetupOtpAlertBody3": "3. Wklej go tutaj {}",
   "detSetupOtpAlertBody3Mobile": "3. Wybierz go albo przeskanuj aparatem za pomocą przycisku Wybierz/Skanuj poniżej",
-  "detSetupOtpAlertBody4": "Jeżeli nie możesz przeskanować kodu, kliknij \"Wprowadź kod ręcznie\"",
+  "detSetupOtpAlertBody4": "Jeżeli nie możesz przeskanować kodu, kliknij Wprowadź kod ręcznie",
   "detSetupOtpManualButton": "Wprowadź kod ręcznie",
   "detSetupOtpScanButton": "Wybierz/Skanuj",
   "detSetupOtpAlertBodyWith": "z {}",
@@ -297,29 +300,32 @@
   "autoTypeMsgMatchedByWindow": "Wybierz hasło dla {}",
   "autoTypeNoMatches": "Brak dopasowań",
   "appSecWarn": "Niezabezpieczone!",
-  "appSecWarnBody1": "Załadowałeś tę aplikację poprzez niezabezpieczone połączenie. Ktoś może podglądać cię i wykradać twoje hasła. Bardzo zalecamy, abyś to przerwał, jeżeli nie rozumiesz, co robisz.",
+  "appSecWarnBody1": "Aplikację załadowano z niezabezpieczonym połączeniem. Ktoś może cię obserwować i ukraść twoje hasła. Zdecydowanie zalecamy przerwanie pracy, chyba że wyraźnie zrozumiesz, co robisz.",
   "appSecWarnBody2": "Tak, twoja baza danych jest zaszyfrowana, ale nikt nie może zagwarantować, że aplikacja nie została zmodyfikowana w drodze do ciebie.",
   "appSecWarnBtn": "Rozumiem zagrożenia, kontynuuj",
   "appUnsavedWarn": "Niezapisane zmiany!",
   "appUnsavedWarnBody": "Masz niezapisane pliki. Jeżeli zamkniesz aplikację, zmiany zostaną utracone.",
   "appDontExitBtn": "Nie wychodź",
-  "appCannotLockAutoInit": "Aplikacja nie może zostać zablokowana, ponieważ autozapisywanie jest wyłączone.",
+  "appCannotLockAutoInit": "Aplikacja nie może być zablokowana, ponieważ autozapisywanie jest wyłączone.",
   "appCannotLock": "Masz niezapisane zmiany, które zostaną utracone. Kontynuować?",
   "appAutoSave": "Zapisz zmiany automatycznie",
   "appSaveError": "Błąd zapisu",
   "appSaveErrorBody": "Nie udało się autozapisywanie pliku",
   "appSaveErrorBodyMul": "Nie udało się autozapisywanie plików:",
   "appSettingsError": "Błąd ładowania aplikacji",
-  "appSettingsErrorBody": "Wystąpił błąd podczas ładowania ustawień aplikacji. Proszę starannie sprawdzić URL aplikacji albo skontaktować się z administratorem.",
+  "appSettingsErrorBody": "Wystąpił błąd podczas ładowania ustawień aplikacji. Proszę sprawdzać dwukrotnie URL aplikacji albo skontaktować się z administratorem.",
   "appNotSupportedError": "Twoja przeglądarka nie jest obsługiwana.",
   "appTabWarn": "Zbyt wiele kart",
   "appTabWarnBody": "KeeWeb nie może być używany w dwóch kartach przeglądarki jednocześnie, proszę zamknąć tę kartę.",
+  "appRightsAlert": "Blokowanie folderu aplikacji",
+  "appRightsAlertBody1": "Twoja aplikacja KeeWeb jest zapisywalna. Prosimy o uprawnienia administratora, aby mógł być zapisywalny tylko dla administratorów.",
+  "appRightsAlertBody2": "Nie chcesz udzielać uprawnień administratora? Możesz to zrobić w Terminalu",
   "setGenTitle": "Ustawienia ogólne",
   "setGenUpdate": "Aktualizacja",
   "setGenNewVersion": "Nowa wersja aplikacji została wydana i pobrana",
   "setGenReleaseNotes": "Zobacz informacje o wydaniu",
   "setGenReloadToUpdate": "Odśwież, aby zaktualizować",
-  "setGenUpdateManual": "Nowa wersja została wydana. Aplikacja sprawdzi aktualizacje i zainstaluje je automatycznie, ale automatyczna aktualizacja z twojej wersji jest niemożliwa.",
+  "setGenUpdateManual": "Nowa wersja została wydana. Aplikacja sprawdzi aktualizacje i zainstaluje je automatycznie, ale taka aktualizacja z twojej wersji jest niemożliwa.",
   "setGenDownloadUpdate": "Pobierz aktualizację",
   "setGenUpdateAuto": "Pobierz i zainstaluj automatycznie",
   "setGenUpdateCheck": "Sprawdź, ale nie instaluj",
@@ -366,7 +372,7 @@
   "setGenNoRememberKeyFiles": "Nie zapamiętuj",
   "setGenRememberKeyFilesData": "Przechowuj w pamięci wewnętrznej aplikacji",
   "setGenRememberKeyFilesPath": "Zapamiętaj tylko ścieżkę do plików klucza",
-  "setGenLockInactive": "Autoblokowanie, gdy aplikacja jest nieaktywna",
+  "setGenLockInactive": "Gdy aplikacja jest nieaktywna",
   "setGenNoAutoLock": "Wyłącz autoblokowanie",
   "setGenLockMinutes": "Przez {} minut",
   "setGenLockHour": "Przez godzinę",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "Po {} sekundach",
   "setGenClearMinute": "Po minucie",
   "setGenMinInstead": "Minimalizuj aplikację zamiast zamykania",
-  "setGenLockMinimize": "Autoblokowanie po minimalizacji",
-  "setGenLockCopy": "Autoblokowanie po skopiowaniu hasła",
-  "setGenLockAutoType": "Autoblokowanie przy auto-type",
+  "setGenLock": "Autoblokowanie",
+  "setGenLockMinimize": "Gdy aplikacja jest zminimalizowana",
+  "setGenLockCopy": "Po skopiowaniu hasła",
+  "setGenLockAutoType": "Przy auto-type",
+  "setGenLockOrSleep": "Gdy komputer jest zablokowany lub uśpiony",
   "setGenStorage": "Przechowywanie",
   "setGenShowAdvanced": "Pokaż zaawansowane ustawienia (mogą być niebezpieczne)",
   "setGenDevTools": "Pokaż narzędzia twórcy",
@@ -402,7 +410,7 @@
   "setFileSyncInProgress": "synchronizacja w toku",
   "setFileSyncError": "Błąd synchronizacji",
   "setFilePass": "Hasło główne",
-  "setFilePassChanged": "Hasło zostało zmienione; zostaw puste pole, aby użyć starego hasła",
+  "setFilePassChanged": "twoje hasło zostało zmienione; zostaw puste pole, aby użyć starego hasła",
   "setFileKeyFile": "Plik klucza",
   "setFileSelKeyFile": "Wybierz plik klucza",
   "setFileNames": "Nazwy",
@@ -435,7 +443,7 @@
   "setFileGenKeyFile": "Wygeneruj nowy plik klucza",
   "setFileDontUseKeyFile": "Nie używaj pliku klucza",
   "setFileEmptyPass": "Puste hasło",
-  "setFileEmptyPassBody": "Zapisywanie bazy danych z pustym hasłem czyni ją zupełnie niezabezpieczoną. Czy na pewno chcesz to zrobić?",
+  "setFileEmptyPassBody": "Zapisywanie bazy danych z pustym hasłem czyni ją zupełnie niezabezpieczoną. Czy naprawdę chcesz to zrobić?",
   "setFileSaveError": "Błąd zapisu",
   "setFileSaveErrorBody": "Błąd zapisu do pliku",
   "setFileAlreadyExists": "Już istnieje",
@@ -444,12 +452,10 @@
   "setFileUnsavedBody": "Istnieją niezapisane zmiany w tym pliku",
   "setFileCloseNoSave": "Zamknij i utrać zmiany",
   "setFileDontClose": "Nie zamykaj",
-  "setFileNoWebDavUpload": "Nie można zapisać do WebDAV",
-  "setFileNoWebDavUploadBody": "Dodawanie nowych plików do WebDAV jest obecnie nieobsługiwane. Proszę ręcznie wysłać swój plik i otworzyć go w aplikacji.",
   "setShTitle": "Skróty",
   "setShShowAll": "Pokaż wszystkie elementy",
   "setShColors": "Pokaż elementy z kolorami",
-  "setShTrash": "Idź do kosza",
+  "setShTrash": "Przejdź do kosza",
   "setShFind": "Wyszukaj albo zacznij pisać",
   "setShClearSearch": "Czyść wyszukiwanie",
   "setShCopyPass": "Skopiuj hasło albo wybrane pole",
@@ -463,13 +469,13 @@
   "setShSave": "Zapisz wszystkie pliki",
   "setShGen": "Wygeneruj hasło",
   "setShSet": "Ustawienia aplikacji",
-  "setShCopyPassGlobal": "Skopiuj hasło (gdy aplikacja jest w tle)",
-  "setShCopyUserGlobal": "Skopiuj użytkownika (gdy aplikacja jest w tle)",
-  "setShCopyUrlGlobal": "Skopiuj stronę WWW (gdy aplikacja jest w tle)",
-  "setShAutoTypeGlobal": "Auto-type (gdy aplikacja jest w tle)",
+  "setShCopyPassGlobal": "Skopiuj hasło (gdy ta aplikacja jest w tle)",
+  "setShCopyUserGlobal": "Skopiuj użytkownika (gdy ta aplikacja jest w tle)",
+  "setShCopyUrlGlobal": "Skopiuj stronę WWW (gdy ta aplikacja jest w tle)",
+  "setShAutoTypeGlobal": "Auto-type (gdy ta aplikacja jest w tle)",
   "setShLock": "Zablokuj bazę danych",
   "setPlInstallTitle": "Zainstaluj nowe wtyczki",
-  "setPlInstallDesc": "Wtyczki KeeWeb dodają funkcje, motywy i języki do KeeWeb. Wtyczki działają z tymi samymi uprawnieniami co KeeWeb, mogą uzyskiwać dostęp do wszystkich twoich haseł i zarządzać nimi. Nigdy nie instaluj wtyczek, do których nie masz zaufania.",
+  "setPlInstallDesc": "Wtyczki KeeWeb dodają funkcje, motywy oraz języki do KeeWeb. Wtyczki działają z tymi samymi uprawnieniami co KeeWeb, mogą uzyskiwać dostęp do wszystkich twoich haseł i zarządzać nimi. Nigdy nie instaluj wtyczek, do których nie masz zaufania.",
   "setPlInstallLabel": "URL wtyczki",
   "setPlInstallBtn": "Zainstaluj",
   "setPlInstallBtnProgress": "Instalowanie",
@@ -506,7 +512,7 @@
   "setAboutSecond": "i na mocy licencji {}.",
   "setAboutSource": "Kod źródłowy oraz zagadnienia dostępne na {}.",
   "setHelpFormat": "Format pliku",
-  "setHelpFormatBody": "To jest port {}, aplikacja została zbudowana przy użyciu technologii sieciowych. KeeWeb rozumie pliki w formacie KeePass (kdbx). Możesz tworzyć takie pliki (bazy danych haseł) w KeePass albo w tym programie. Format pliku jest w 100% kompatybilny i powinien być zrozumiany przez oba programy.",
+  "setHelpFormatBody": "To jest port {}, aplikacja została zbudowana przy użyciu technologii sieciowych. KeeWeb rozumie pliki w formacie KeePass (KDBX). Możesz stworzyć takie pliki (bazy danych haseł) w KeePass albo w tym programie. Format pliku jest w 100% kompatybilny i powinien być zrozumiany przez oba programy.",
   "setHelpProblems": "Problemy?",
   "setHelpProblems1": "Jeśli coś pójdzie nie tak, proszę {}",
   "setHelpProblems2": "albo {}",
@@ -518,22 +524,11 @@
   "setHelpWebApp": "Aplikacja sieciowa",
   "setHelpUpdates": "Aktualizacje",
   "setHelpTwitter": "Twitter aplikacji",
-  "dropboxLogin": "Logowanie Dropbox",
-  "dropboxLoginBody": "Aby kontynuować, musisz zalogować się do Dropboksa",
-  "dropboxSyncError": "Błąd synchronizacji Dropboksa",
-  "dropboxNotFoundBody": "Plik nie został znaleziony. Czy został usunięty na innym komputerze?",
-  "dropboxFull": "Dropbox pełny",
-  "dropboxFullBody": "Twój Dropbox jest pełny, brakuje wolnego miejsca.",
-  "dropboxRateLimitedBody": "Ta aplikacja wykonała zbyt wiele żądań do Dropboksa. Proszę spróbować ponownie później.",
-  "dropboxNetError": "Błąd sieciowy synchronizacji Dropboksa",
-  "dropboxNetErrorBody": "Wystąpił błąd sieciowy podczas synchronizacji Dropboksa. Proszę sprawdzić połączenie i spróbować ponownie.",
-  "dropboxErrorBody": "Coś poszło nie tak w trakcie synchronizacji Dropboksa. Proszę spóbować ponownie później. Kod błędu:",
-  "dropboxErrorRepeatBody": "Coś poszło nie tak w trakcie synchronizacji Dropboksa. Proszę spóbować ponownie później. Błąd:",
-  "dropboxSetupDesc": "Niektóra konfiguracja jest wymagana do użycia Dropboksa jako aplikacji na własnym serwerze. Proszę stworzyć własną aplikację Dropbox i wpisać jej klucz poniżej.",
+  "dropboxSetupDesc": "Trochę konfiguracji jest wymagane do użycia Dropboksa jako aplikacji na własnym serwerze. Proszę stworzyć własną aplikację Dropbox i wpisać jej klucz poniżej.",
   "dropboxAppKey": "Klucz aplikacji Dropbox",
   "dropboxAppKeyDesc": "Skopiuj klucz z twojej aplikacji Dropbox (ustawienia programisty)",
   "dropboxFolder": "Folder aplikacji",
-  "dropboxFolderDesc": "Jeżeli twoja aplikacja jest połączona z całym Dropboksem (nie z folderem aplikacji), ustaw tutaj folder z twoimi plikami Kdbx",
+  "dropboxFolderDesc": "Jeżeli twoja aplikacja jest połączona z całym Dropboksem (nie z folderem aplikacji), ustaw tutaj folder z twoimi plikami KDBX",
   "dropboxFolderSettingsDesc": "Wybierz dowolny folder w twoim Dropboksie, w którym będą przechowywane pliki (domyślnie folder główny)",
   "dropboxFolderPlaceholder": "Folder domyślny",
   "dropboxLink": "Połącz aplikację z",
@@ -542,9 +537,9 @@
   "dropboxLinkCustom": "Własną aplikacją Dropbox",
   "webdavSaveMethod": "Metoda zapisu",
   "webdavSaveMove": "Prześlij tymczasowy plik i przenieś",
-  "webdavSavePut": "Nadpisz plik kdbx przez PUT",
+  "webdavSavePut": "Nadpisz plik KDBX przez PUT",
   "launcherSave": "Zapisz bazę danych haseł",
   "launcherFileFilter": "Pliki KeePass",
   "authPopupRequired": "Okna pop-up są zablokowane",
-  "authPopupRequiredBody": "Proszę zezwolić twojej przeglądarce na wyskakujące okna dla tej aplikacji."
+  "authPopupRequiredBody": "Proszę zezwolić przeglądarce na wyskakujące okna dla tej aplikacji."
 }
