--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Entrar",
   "alertCopy": "Cópiar",
   "alertClose": "Fechar",
+  "alertDoNotAsk": "Não perguntar mais",
   "appBeta": "AVISO: versão beta, apenas para inspeção",
   "footerOpen": "Abrir / Novo",
   "footerSyncError": "Erro de sincronização",
@@ -211,6 +212,8 @@
   "openError": "Erro",
   "openErrorDescription": "Ocorreu um erro ao abrir o arquivo",
   "openErrorFileNotFound": "Arquivo",
+  "openListErrorBody": "Ocorreu um erro ao carregar a lista de arquivos",
+  "openShowAllFiles": "Mostrar todos",
   "detAttDownload": "Shift-clique no botão anexo para baixar ou",
   "detAttDelToRemove": "Excluir para remover",
   "detEmpty": "Suas senhas serão exibidas aqui",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Seu navegador não é suportado.",
   "appTabWarn": "Muitas guias",
   "appTabWarnBody": "KeeWeb não pode ser usado em duas guias do navegador simultaneamente, por favor, feche esta guia.",
+  "appRightsAlert": "Bloqueando KeeWeb",
+  "appRightsAlertBody1": "Seu KeeWeb não está seguro contra mudanças não autorizadas. Nós estamos pedindo sua permissão para que o app seja alterado somente para administradores.",
+  "appRightsAlertBody2": "Não quer dar permissão? Você pode fazer no Terminal",
   "setGenTitle": "Configurações Gerais",
   "setGenUpdate": "Atualizar",
   "setGenNewVersion": "A nova versão do aplicativo foi lançada e baixada",
@@ -377,9 +383,11 @@
   "setGenClearSeconds": "Em {} segundos",
   "setGenClearMinute": "Em 1 minuto",
   "setGenMinInstead": "Minimizar aplicativo em vez de fechar",
+  "setGenLock": "Bloqueio automático",
   "setGenLockMinimize": "Bloquear automaticamente ao minimizar",
   "setGenLockCopy": "Bloquear automaticamente ao copiar uma senha",
   "setGenLockAutoType": "Auto bloquear ao auto-teclar",
+  "setGenLockOrSleep": "Quando o computador estiver bloqueado ou for hibernado",
   "setGenStorage": "Armazenamento",
   "setGenShowAdvanced": "Mostrar configurações avançadas",
   "setGenDevTools": "Mostar ferramenta para desenvolvedores",
@@ -444,8 +452,6 @@
   "setFileUnsavedBody": "Existem mudanças não salvas para este arquivo",
   "setFileCloseNoSave": "Fechar e perder mudanças",
   "setFileDontClose": "Não fechar",
-  "setFileNoWebDavUpload": "Não pode salvar em WebDAV",
-  "setFileNoWebDavUploadBody": "A adição de novos arquivos ao WebDAV não é suportada no momento. Por favor, carregue seu arquivo manualmente e abra o aplicativo.",
   "setShTitle": "Atalhos",
   "setShShowAll": "Mostra todos os itens",
   "setShColors": "Mostra itens com cores",
@@ -518,17 +524,6 @@
   "setHelpWebApp": "Aplicação Web",
   "setHelpUpdates": "Atualizações",
   "setHelpTwitter": "App Twitter",
-  "dropboxLogin": "Dropbox Login",
-  "dropboxLoginBody": "Para continuar, você deve fazer login no Dropbox.",
-  "dropboxSyncError": "Erro de sincronia Dropbox",
-  "dropboxNotFoundBody": "O arquivo não foi encontrado. Foi removido de outro computador?",
-  "dropboxFull": "Dropbox cheio",
-  "dropboxFullBody": "Seu Dropbox está cheio, já não resta mais espaço.",
-  "dropboxRateLimitedBody": "Muitas solicitações para Dropbox foram feitas por este aplicativo. Por favor, tente novamente mais tarde.",
-  "dropboxNetError": "Erro de rede do Dropbox Sync",
-  "dropboxNetErrorBody": "Ocorreu um erro de rede durante a sincronização do Dropbox. Por favor verifique sua conexão e tente novamente.",
-  "dropboxErrorBody": "Algo deu errado durante a sincronização do Dropbox. Por favor, tente novamente mais tarde. Código de Erro:",
-  "dropboxErrorRepeatBody": "Algo deu errado durante a sincronização do Dropbox. Por favor, tente novamente mais tarde. Erro:",
   "dropboxSetupDesc": "É necessária alguma configuração para usar o Dropbox no aplicativo autônomo. Crie seu próprio aplicativo Dropbox e preencha sua chave abaixo.",
   "dropboxAppKey": "Chave do aplicativo Dropbox",
   "dropboxAppKeyDesc": "Copie a chave do seu aplicativo Dropbox (Configurações do desenvolvedor)",
