--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -122,7 +122,7 @@
   "tagExists": "标签已存在",
   "tagExistsBody": "该标签名已存在, 请使用其他名称。",
   "tagBadName": "非法名称",
-  "tagBadNameBody": "标签名称中不能包含字符\"{}\"。请删除该字符。",
+  "tagBadNameBody": "标签名称中不能包含字符{}。请删除该字符。",
   "genPsTitle": "生成器预设",
   "genPsCreate": "新预设",
   "genPsDelete": "删除预设",
@@ -444,8 +444,6 @@
   "setFileUnsavedBody": "此文件有未保存的更改",
   "setFileCloseNoSave": "关闭并放弃更改",
   "setFileDontClose": "不要关闭",
-  "setFileNoWebDavUpload": "无法保存到 WebDAV",
-  "setFileNoWebDavUploadBody": "暂不支持向 WebDAV 添加新文件。请手动上传您的文件并在此应用中打开。",
   "setShTitle": "快捷键",
   "setShShowAll": "显示所有项",
   "setShColors": "显示带颜色的项",
@@ -518,17 +516,6 @@
   "setHelpWebApp": "网页应用",
   "setHelpUpdates": "更新",
   "setHelpTwitter": "官方 Twitter",
-  "dropboxLogin": "Dropbox 登录",
-  "dropboxLoginBody": "若要继续，您必须登录 Dropbox。",
-  "dropboxSyncError": "Dropbox 同步错误",
-  "dropboxNotFoundBody": "没有找到文件。它从另一台电脑删除了吗？",
-  "dropboxFull": "Dropbox 已满",
-  "dropboxFullBody": "您的 Dropbox 空间已经满了，没有剩余空间。",
-  "dropboxRateLimitedBody": "Dropbox 收到过多来自此应用的请求，请稍后再试。",
-  "dropboxNetError": "Dropbox 同步网络错误",
-  "dropboxNetErrorBody": "Dropbox 同步过程中出现网络错误。请检查您的连接后再试。",
-  "dropboxErrorBody": "Dropbox在同步过程中出了问题。请稍后再试。错误代码：",
-  "dropboxErrorRepeatBody": "Dropbox 在同步过程中出了问题。请稍后再试。错误：",
   "dropboxSetupDesc": "通过托管应用使用 Dropbox 需要一些额外注册信息。请创建您自己的 Dropbox 应用，并在下方填写app key。",
   "dropboxAppKey": "Dropbox app key",
   "dropboxAppKeyDesc": "从您的 Dropbox 应用中复制 key (开发者设置)",
