--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -2,86 +2,103 @@
   "zh-TW": {
     "name": "繁體中文",
     "nameEn": "Chinese Traditional",
-    "count": 506
+    "count": 493,
+    "version": "1.3.0"
   },
   "zh-CN": {
     "name": "简体中文",
     "nameEn": "Chinese Simplified",
-    "count": 506
+    "count": 493,
+    "version": "1.6.0"
   },
   "pt-PT": {
     "name": "Português",
     "nameEn": "Portuguese",
-    "count": 450
+    "count": 437,
+    "version": "1.3.0"
   },
   "ko": {
     "name": "한국어",
     "nameEn": "Korean",
-    "count": 506
+    "count": 493,
+    "version": "1.7.0"
   },
   "cs": {
     "name": "Čeština",
     "nameEn": "Czech",
-    "count": 415
+    "count": 403,
+    "version": "1.2.0"
   },
   "pl": {
     "name": "Polski",
     "nameEn": "Polish",
-    "count": 506
+    "count": 501,
+    "version": "1.5.0"
   },
   "hu": {
     "name": "Magyar",
     "nameEn": "Hungarian",
-    "count": 483
+    "count": 470,
+    "version": "1.5.0"
   },
   "uk": {
     "name": "Українська",
     "nameEn": "Ukrainian",
-    "count": 506
+    "count": 493,
+    "version": "1.3.0"
   },
   "pt-BR": {
     "name": "Português (Brasil)",
     "nameEn": "Portuguese (Brazil)",
-    "count": 506
+    "count": 501,
+    "version": "1.3.0"
   },
   "no": {
     "name": "Norsk",
     "nameEn": "Norwegian",
-    "count": 506
+    "count": 493,
+    "version": "1.5.0"
   },
   "nl-NL": {
     "name": "Nederlands",
     "nameEn": "Dutch",
-    "count": 506
+    "count": 493,
+    "version": "1.5.0"
   },
   "fr-FR": {
     "name": "Français",
     "nameEn": "French",
-    "count": 506
+    "count": 501,
+    "version": "1.6.0"
   },
   "de-DE": {
     "name": "Deutsch",
     "nameEn": "German",
-    "count": 506
+    "count": 501,
+    "version": "1.5.0"
   },
   "it-IT": {
     "name": "Italiano",
     "nameEn": "Italian",
-    "count": 506
+    "count": 493,
+    "version": "1.5.0"
   },
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 506
+    "count": 493,
+    "version": "1.9.0"
   },
   "es-ES": {
     "name": "Español",
     "nameEn": "Spanish",
-    "count": 506
+    "count": 501,
+    "version": "1.5.0"
   },
   "sv-SE": {
     "name": "Svenska",
     "nameEn": "Swedish",
-    "count": 460
+    "count": 447,
+    "version": "1.3.0"
   }
 }
